--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm -r ../static && mv build/* ../"
+    "build": "react-scripts build"
   },
   "homepage": ".",
   "eslintConfig": {
